@@ -1,6 +1,6 @@
 package io.aiven.commons.system;
 /*
-         Copyright 2025 Aiven Oy and project contributors
+         Copyright 2026 Aiven Oy and project contributors
 
         Licensed under the Apache License, Version 2.0 (the "License");
         you may not use this file except in compliance with the License.
@@ -18,9 +18,7 @@ package io.aiven.commons.system;
         SPDX-License-Identifier: Apache-2
  */
 
-import java.lang.reflect.Field;
 import java.util.Arrays;
-import java.util.Map;
 import java.util.Set;
 import java.util.stream.Collectors;
 
@@ -28,45 +26,46 @@ import java.util.stream.Collectors;
  * Checks URLs against the URLs allowed as per the
  * {@code org.apache.kafka.sasl.oauthbearer.allowed.urls} environment variable.
  * If the variable is not set all URLs are allowed.
+ *
  */
-public final class EnvCheck {
+public final class SystemCheck {
 	/**
 	 * The type of object being checked.
 	 */
 	public enum Type {
 		/** validate a file name is in the list of files */
-		FILE("io.aiven.commons.envcheck.files"),
+		FILE("io.aiven.commons.auth.files"),
 		/** validate a URI is in the list of URIs */
-		URI("io.aiven.commons.envcheck.uri"),
+		URI("io.aiven.commons.auth.uri"),
 		/** validate an external command is in the list of commands */
-		CMD("io.aiven.commons.envcheck.cmd");
+		CMD("io.aiven.commons.auth.cmd");
 
 		/**
 		 * The environment variable name for this type.
 		 */
-		private String envVar;
+		private String systemProperty;
 
 		/**
 		 * Create a Type.
-		 * 
-		 * @param envVar
-		 *            the name of the environment variable for this type.
+		 *
+		 * @param systemProperty
+		 *            the name of the system property for this type.
 		 */
-		Type(String envVar) {
-			this.envVar = envVar;
+		Type(String systemProperty) {
+			this.systemProperty = systemProperty;
 		}
 
 		/**
 		 * Get the environment variable name for this type.
-		 * 
+		 *
 		 * @return the Environment variable name for this type./
 		 */
-		public String envVar() {
-			return envVar;
+		public String getSystemProperty() {
+			return systemProperty;
 		}
 	}
 
-	private EnvCheck() {
+	private SystemCheck() {
 		// do not instantiate
 	}
 
@@ -81,7 +80,7 @@ public final class EnvCheck {
 	 */
 	public static String formatError(Type type, String value) {
 		return String.format("%1$s is not an allowed %2$s value. Update system property '%3$s' to allow %1$s", value,
-				type, type.envVar);
+				type, type.getSystemProperty());
 	}
 
 	/**
@@ -97,7 +96,7 @@ public final class EnvCheck {
 	 *         value is not listed.
 	 */
 	public static boolean allowed(Type type, String value) {
-		String allowedUrlsProp = System.getenv(type.envVar);
+		String allowedUrlsProp = System.getProperty(type.getSystemProperty());
 		if (allowedUrlsProp == null) {
 			return false;
 		}
@@ -107,8 +106,7 @@ public final class EnvCheck {
 	}
 
 	/**
-	 * Thorw an exception if the specified URL is not listed in the
-	 * {@code org.apache.kafka.sasl.oauthbearer.allowed.urls} environment variable.
+	 * Throw an exception if the specified URL is not listed in the system property.
 	 *
 	 * @param type
 	 *            the type to check.
@@ -122,39 +120,4 @@ public final class EnvCheck {
 			throw new IllegalArgumentException(formatError(type, value));
 		}
 	}
-
-	/**
-	 * Return an updatable version of the environment variables. Changes to the map
-	 * will be reflected in the system environment variables.
-	 * <p>
-	 * This method will only work if the command line options
-	 * {@code --add-opens java.base/java.util=io.aiven.commons.system} and
-	 * {@code --add-opens java.base/java.lang=io.aiven.commons.system} are used.
-	 * </p>
-	 * <p>
-	 * Changes made to the returned map change the environment variables. This is
-	 * handy for testing but should be done in a {@code try-catch-finally} block
-	 * with the values being reset in the finally block.
-	 * </p>
-	 * <p>
-	 * To remove an environment variable use the {@link Map#remove(Object)} method.
-	 * Setting the map value to {@code null} will throw an exception.
-	 * </p>
-	 * 
-	 * @return a modifiable map backed by the system environment variables.
-	 * @throws NoSuchFieldException
-	 *             Should not be thrown. Indicates a change to the
-	 *             {@code Collections.UnmodifiableMap} implementation.
-	 * @throws IllegalAccessException
-	 *             if the command line options were not specified when the JVM was
-	 *             loaded.
-	 */
-	public static Map<String, String> getEnvVars() throws NoSuchFieldException, IllegalAccessException {
-		Class<?> classOfMap = System.getenv().getClass();
-		// The field m inside the UnmodifiableMap wrapper object is a mutable Map
-		Field field = classOfMap.getDeclaredField("m");
-		field.setAccessible(true);
-		return (Map<String, String>) field.get(System.getenv());
-	}
-
 }
